# SOC-AGENTS

./: .dockerignore  .env.example  .gitignore  DESIGN_PHASE_1.md  DESIGN_PHASE_1_API.md  DESIGN_PHASE_1_ARCHITECTURE.md  DESIGN_PHASE_1_DATABASE.md  DESIGN_PHASE_1_GITHUB.md  README.md  design.md  package-lock.json  package.json  todo.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: investigation.py  report_generation.py  response.py  risk_scoring.py  state.py  supervisor.py  threat_hunting.py  threat_intelligence.py  triage.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  permissions.py  security.py
backend/app/domain/: agents.py  embeddings.py  llm.py  models.py  permissions.py  rag.py  repositories.py  reranking.py  services.py
backend/app/rag/: chunking.py  hybrid.py  indexing.py  knowledge_base.py  pipeline.py  reranking.py
backend/enterprise_ai_soc_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/tests/: test_agent_state_store.py  test_auth_mfa.py  test_bge_m3_embeddings.py  test_bge_reranker.py  test_chunking.py  test_health.py  test_hybrid.py  test_investigation_agent.py  test_knowledge_base.py  test_openrouter_client.py  test_permissions.py  test_rag.py  test_rag_indexing.py  test_rag_pipeline.py  test_rag_reranking.py  test_report_generation_agent.py  test_response_agent.py  test_risk_scoring_agent.py  test_supervisor_agent.py  test_threat_hunting_agent.py  test_threat_intelligence_agent.py  test_triage_graph.py
(+110 files in other folders)
