[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-soc-backend"
version = "0.1.0"
description = "FastAPI backend for the Enterprise AI SOC platform."
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi[standard]>=0.115",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis>=5.2,<9",
  "python-jose[cryptography]>=3.3",
  "passlib[argon2]>=1.7",
  "structlog>=24.4",
  "opentelemetry-api>=1.28",
  "opentelemetry-sdk>=1.28",
  "httpx>=0.27",
  "pinecone[asyncio]>=7,<8",
  "langgraph>=0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13"
]
embeddings = [
  "FlagEmbedding>=1.3"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
